z-index-bug
 * remove old z-index

--- a/src/nu-cookie-banner.scss
+++ b/src/nu-cookie-banner.scss
@@ -7,7 +7,6 @@
     bottom: 0;
     margin-bottom: 25px;
     justify-content: center;
-    z-index: 1000;
     padding-left: 20px;
     padding-right: 20px;
   }
